Opened 13 years ago
Closed 13 years ago
#4650 closed bug (fixed)
Fix Terminal BasicTerminalBuffer::_InsertGap() to not set length longer than allocated space
Reported by: | joshe | Owned by: | stippi |
---|---|---|---|
Priority: | normal | Milestone: | R1 |
Component: | Applications/Terminal | Version: | R1/alpha1 |
Keywords: | Cc: | ||
Blocked By: | Blocking: | ||
Platform: | All |
Description
_InsertGap() unconditionally adds the width of the gap to the line width, even though the actual memmove() takes into account that the gap might be too large for the line buffer. Attached is a patch which insures that the line length won't be expanded beyond the size of the buffer, which is equal to the screen width.
Attachments (1)
Change History (4)
by , 13 years ago
Attachment: | term-line-overflow.patch added |
---|
comment:1 by , 13 years ago
Component: | - General → Applications/Terminal |
---|---|
Owner: | changed from | to
comment:2 by , 13 years ago
Owner: | changed from | to
---|---|
Status: | new → assigned |
comment:3 by , 13 years ago
Resolution: | → fixed |
---|---|
Status: | assigned → closed |
Applied in hrev33317. Nice catch!
Note:
See TracTickets
for help on using tickets.
Fix possible line width overflow in BasicTerminalBuffer::_InsertGap()