Patch by Joshua R. Elsasser: (ticket #4650) * In _InsertGap(), be sure not to set a line's length longer than the space   allocated for it.

Nice catch, thanks a bunch!


git-svn-id: file:///srv/svn/repos/haiku/haiku/trunk@33317 a95241bf-73f2-0310-859d-f6bbb57e9c96